# tree-sitter-12dpl

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: node.js.yml
examples/: segementize.4dm
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: declaration.txt  expression.txt  expressions.txt  preprocessor.txt  statement.txt  statements.txt  type.txt  types.txt
test/highlight/: functions.4dm  keywords.4dm  names.4dm  preprocessor.4dm
test/tags/: definition_function.4dm
