[package]
name = "tree-sitter-12dpl"
description = "12dpl grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = ["Kelly Lin <findkellylin@gmail.com>"]
keywords = ["incremental", "parsing", "12dpl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/kelly-lin/tree-sitter-12dpl"
edition = "2022"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
